[metadata]
name = carebt
version = 1.0.0-snapshot
license = Apache License 2.0
author = Andreas Steck
author_email = steck.andi@gmail.com
description = A Python library for contingency aware behavior trees (careBT)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CareBT/careBT
project_urls =
    Bug Tracker = https://github.com/CareBT/careBT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0

[options]
package_dir =
    = carebt
packages = find:
python_requires = >=3.8

[options.packages.find]
where = carebt
