[metadata]
name = carebt
version = attr: carebt.version.__version__
license = Apache License 2.0
author = Andreas Steck
author_email = steck.andi@gmail.com
description = A Python library for contingency aware Behavior Trees (careBT)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/careBT/careBT
project_urls =
    Bug Tracker = https://github.com/careBT/careBT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0

[options]
include_package_data = true
packages = carebt
python_requires = >=3.8
